--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,7 +60,6 @@ header img{
 .sec1{
   display: flex;
   height: 100vh;
-  width: 100vw;
 }
 
 .img{
@@ -69,6 +68,7 @@ header img{
     background-size: cover;
     background-position: center;
     background-repeat:no-repeat ;
+    /* filter: grayscale(30%) */
 }
 
 .sec1left{
@@ -168,32 +168,105 @@ header img{
     color: rgb(226, 113, 173);
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 28px;
+    margin-left: 40px;
     margin-bottom: 10px;
     margin-top: 15px;
 }
 /* Fin de la section 2 */
 
+/* Inicio de la section 3 */
 .sec3{
     display: flex;
-    /* align-items: center; */
-    /* flex-direction: column; */
-    justify-content: space-around;
+    padding-left: 15%;
+    padding-right: 15%;
     background-color: rgb(30, 23, 47);
-    color: white;
+    height: 80vh;
 }
 
 .tarjetas{
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    background-color: blue;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    color: black;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-bottom: 4%;
 }
 
+.sec3 p{
+    margin-left: 10px;
+}
 
+.h5p{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(30, 23, 47);
+}
 
+.h5p h5{
+    font-size: 60px;
+    font-family: sans-serif;
+    color: white;
+    padding-top: 30px;
+}
 
+.h5p p{
+    font-size: 20px;
+    padding: 0% 20% 0% 20%;
+    font-family: sans-serif;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 60px;
+    color: rgb(201, 199, 197);
+}
+
+.money{
+    background-color: #F5F5F5;
+    font-size: 42px;
+    width: 100%;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+}
+
+.sup1{
+    font-size: 20px;
+}
+
+.sec3 h6{
+    font-size: 20px;
+    font-family: sans-serif;
+    padding-bottom: 20px;
+}
+
+.sec3 li{
+    font-size: 20px;
+    font-family: sans-serif;
+    list-style: none;
+    line-height: 30px;
+}
+
+.pri{
+    color: rgb(244, 20, 134);
+}
+
+.parrafo{
+    font-size: 20px;
+    font-family: sans-serif;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 0px 30px 0px 30px;
+    text-align: justify;
+}
+
+.bot{
+    background-color: #8043D5;
+    width: 100%;
+    text-align: center;
+}
 
 
 
