--- a/styles/styles.css
+++ b/styles/styles.css
@@ -623,3 +623,209 @@ footer p{
         width: 18px;
     }
 }
+
+@media (max-width:768px){
+
+    header{
+        height: 5vh;
+    }
+
+    header a{
+        font-size: 9px;
+        margin-left: 16px;
+    }
+
+    .boton1{
+        padding: 10px 15px 10px 15px;
+    }
+
+    .sec1 h1{
+        font-size: 45px;
+        line-height: 40px;
+    }
+
+    .sec1 p{
+        font-size: 10px;
+        margin-left: 12%;
+    }
+
+    .botones{
+        padding: 4px 6px 4px 6px;
+        margin-left: 7%;
+    }
+
+    .boton2{
+        font-size: 6px;
+    }
+
+    .boton3{
+        font-size: 6px;
+    }
+
+    .sec1left{
+        padding: 0px;
+    }
+
+    .sec2 h2{
+        font-size: 32px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .texto{
+        margin-left: 10px;
+    }
+
+    .texto h3{
+        font-size: 18px;
+        margin-left: 13px;
+        margin-bottom: 6px;
+    }
+
+    .texto h4{
+        font-size: 13px;
+        margin-left: 14px;
+        margin-bottom: 3px;
+        margin-top: 8px;
+    }
+
+    .derecho p{
+        font-size: 10px;
+        line-height: 13px;
+    }
+
+    .im1{
+        width: 42%;
+        margin-left: 8%;
+    }
+
+    .derecho{
+        margin-right: 0px;
+    }
+
+    .h5p h5{
+        font-size: 35px;
+        padding-top: 14px;
+    }
+
+    .h5p p{
+        padding: 2% 13% 6% 13%;
+        font-size: 10px;
+    }
+    
+    .sec3 h6{
+        font-size: 13px;
+        padding-bottom: 8px;
+    }
+
+    .sec3 li{
+        font-size: 12px;
+        line-height: 21px;
+    }
+
+    .money p{
+        font-size: 20px;
+    }
+
+    .sup1{
+        font-size: 12px;
+    }
+
+    .sec3 {
+        padding-left: 2%;
+        padding-right: 2%;
+    }
+
+    .parrafo{
+        font-size: 12px;
+    }
+
+    .bot1{
+        font-size: 11px;
+        padding: 10px 16px 10px 16px;
+    }
+
+    .bot2{
+        font-size: 11px;
+        padding: 10px 16px 10px 16px;
+    }
+
+    .i{
+        font-size: 10px;
+    }
+
+    .n{
+        font-size: 10px;
+    }
+
+    .tarjetas{
+        margin-left: 3px;
+        margin-right: 3px;
+    }
+
+    footer{
+        height: 6vh;
+    }
+
+    footer p{
+        font-size: 10px;
+    }
+
+    .img1{
+        width: 8px;
+    }
+
+    .img2 {
+        width: 18px;
+    }
+
+    .img3 {
+        width: 19px;
+    }
+
+    .img4 {
+        width: 15px;
+    }
+
+    .imagenes {
+        margin-left: 20%;
+    }
+}
+
+
+@media (max-width:480px){
+
+    .sec3{
+        flex-direction: column;
+    }
+
+    header a{
+        font-size: 8px;
+        margin-left: 6px;
+    }
+
+    .boton1{
+        padding: 8px 13px 8px 13px;
+        border-radius: 3px;
+    }
+
+    .sec1 h1 {
+        font-size: 35px;
+        line-height: 32px;
+        margin-bottom: 10px;
+    }
+
+    .sec1 p{
+        font-size: 8px;
+        margin-left: 14%;
+    }
+
+    .boton2 b{
+        font-size: 10px;
+    }
+
+    .botones {
+        padding: 3px 5px 3px 5px;
+        margin-left: 2%;
+    }
+}
