--- a/styles/styles.css
+++ b/styles/styles.css
@@ -813,19 +813,86 @@ footer p{
         font-size: 35px;
         line-height: 32px;
         margin-bottom: 10px;
+        margin-top: 25px;
     }
 
     .sec1 p{
-        font-size: 8px;
+        font-size: 10px;
         margin-left: 14%;
+        margin-bottom: 15px;
     }
 
-    .boton2 b{
-        font-size: 10px;
+    .boton2{
+        font-size: 4px;
+    }
+
+    .boton3{
+        font-size: 4px;
     }
 
     .botones {
         padding: 3px 5px 3px 5px;
         margin-left: 2%;
+        margin-bottom: 15px;
+    }
+
+    .sec2 h2{
+        font-size: 26px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+    }
+
+    .derecho{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .im1{
+        margin-left: 0%;
+        margin-bottom: 10px;
+    }
+
+    .texto{
+        margin-left: 10%;
+        margin-right: 2%;
+    }
+
+    .texto h3{
+        margin-left: 24px;
+        margin-bottom: 5px;
+    }
+
+    .texto h4{
+        margin-left: 28px;
+    }
+
+    .h5p h5{
+        font-size: 32px;
+        padding-top: 9px;
+    }
+
+    .tarjetas{
+        margin-left: 12%;
+        margin-right: 12%;
+    }
+
+    footer p {
+        font-size: 7px;
+    }
+
+    .img1{
+        width: 8px;
+    }
+
+    .img2 {
+        width: 16px;
+    }
+
+    .img3 {
+        width: 17px;
+    }
+
+    .img4 {
+        width: 13px;
     }
 }
